tests/fail/expr/paren.rs
fn main() {
    one_assert::assert!((1));
}
